# qEditor

./: CMakeLists.txt  PKGBUILD  README.md
resources/: qEditor.desktop
src/: mainwindow.cpp  mainwindow.h  mainwindow.ui  tabbededitor.cpp  tabbededitor.h
src/highlighters/: pythonhighlighter.cpp
